[package]
name = "locusts"
version = "0.0.0"
description = "A Rust library that introduces locusts into your codebase"
authors = ["Matt Strapp <matt+locusts@mattstrapp.net>"]
readme = "docs/Rust.md"
license = "0BSD"
edition = "2015"
repository = "https://github.com/locusts-r-us/locusts"

[dependencies]
